<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<!-- Layouts can be nested one within another to position Views more precisely -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/bTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left" />

        <Button
            android:id="@+id/bRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right" />
    </LinearLayout>

    <Button
        android:id="@+id/bBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom" />

</LinearLayout>