<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<!-- GridLayout that consists of 3 columns (columnCount) and 3 rows (rowCount) -->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="3">

    <!-- View at (0,0), (1,0) and (2,0) as it spans 3 rows (rowSpan) -->
    <Button
        android:id="@+id/button19"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_rowSpan="3"
        android:text="@string/button1" />

    <!-- View at (0,1) -->
    <Button
        android:id="@+id/button18"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/button2" />

    <!-- View at (1,1) and (1,2), because it spans 2 columns (columnSpan) and does not fit in (0,2) -->
    <Button
        android:id="@+id/button17"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/long_text" />

    <!-- View at (2,2) (layout_row and layout_column) -->
    <Button
        android:id="@+id/button15"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="fill"
        android:text="@string/button3" />

</GridLayout>